@@ -212,6 +212,20 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|Accountable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|ArrayUtil
 import|;
 end_import
@@ -258,6 +272,20 @@ name|BytesRef
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|RamUsageEstimator
+import|;
+end_import
+
 begin_comment
 comment|/**  * Constructs a filter for docs matching any of the terms added to this class.  * Unlike a RangeFilter this can be used for filtering on multiple terms that are not necessarily in  * a sequence. An example might be a collection of primary keys from a database query result or perhaps  * a choice of "category" labels picked by the end user. As a filter, this is much faster than the  * equivalent query (a BooleanQuery with many "should" TermQueries)  */
 end_comment
@@ -270,7 +298,25 @@ class|class
 name|TermsFilter
 extends|extends
 name|Filter
+implements|implements
+name|Accountable
 block|{
+DECL|field|BASE_RAM_BYTES_USED
+specifier|private
+specifier|static
+specifier|final
+name|long
+name|BASE_RAM_BYTES_USED
+init|=
+name|RamUsageEstimator
+operator|.
+name|shallowSizeOfInstance
+argument_list|(
+name|TermsFilter
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 comment|/*    * this class is often used for large number of terms in a single field.    * to optimize for this case and to be filter-cache friendly we     * serialize all terms into a single byte array and store offsets    * in a parallel array to keep the # of object constant and speed up    * equals / hashcode.    *     * This adds quite a bit of complexity but allows large term filters to    * be efficient for GC and cache-lookups    */
 DECL|field|offsets
 specifier|private
@@ -889,6 +935,39 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
+DECL|method|ramBytesUsed
+specifier|public
+name|long
+name|ramBytesUsed
+parameter_list|()
+block|{
+return|return
+name|BASE_RAM_BYTES_USED
+operator|+
+name|RamUsageEstimator
+operator|.
+name|sizeOf
+argument_list|(
+name|termsAndFields
+argument_list|)
+operator|+
+name|RamUsageEstimator
+operator|.
+name|sizeOf
+argument_list|(
+name|termsBytes
+argument_list|)
+operator|+
+name|RamUsageEstimator
+operator|.
+name|sizeOf
+argument_list|(
+name|offsets
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
 DECL|method|getDocIdSet
 specifier|public
 name|DocIdSet
@@ -1398,7 +1477,39 @@ specifier|static
 specifier|final
 class|class
 name|TermsAndField
+implements|implements
+name|Accountable
 block|{
+DECL|field|BASE_RAM_BYTES_USED
+specifier|private
+specifier|static
+specifier|final
+name|long
+name|BASE_RAM_BYTES_USED
+init|=
+name|RamUsageEstimator
+operator|.
+name|shallowSizeOfInstance
+argument_list|(
+name|TermsAndField
+operator|.
+name|class
+argument_list|)
+operator|+
+name|RamUsageEstimator
+operator|.
+name|shallowSizeOfInstance
+argument_list|(
+name|String
+operator|.
+name|class
+argument_list|)
+operator|+
+name|RamUsageEstimator
+operator|.
+name|NUM_BYTES_ARRAY_HEADER
+decl_stmt|;
+comment|// header of the array held by the String
 DECL|field|start
 specifier|final
 name|int
@@ -1448,6 +1559,29 @@ name|field
 operator|=
 name|field
 expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|ramBytesUsed
+specifier|public
+name|long
+name|ramBytesUsed
+parameter_list|()
+block|{
+comment|// this is an approximation since we don't actually know how strings store
+comment|// their data, which can be JVM-dependent
+return|return
+name|BASE_RAM_BYTES_USED
+operator|+
+name|field
+operator|.
+name|length
+argument_list|()
+operator|*
+name|RamUsageEstimator
+operator|.
+name|NUM_BYTES_CHAR
+return|;
 block|}
 annotation|@
 name|Override
