@@ -388,20 +388,6 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|BytesRef
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
 name|BitDocIdSet
 import|;
 end_import
@@ -416,7 +402,7 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|FixedBitSet
+name|BytesRef
 import|;
 end_import
 
@@ -444,7 +430,35 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|RamUsageTester
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|TestUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|carrotsearch
+operator|.
+name|randomizedtesting
+operator|.
+name|generators
+operator|.
+name|RandomStrings
 import|;
 end_import
 
@@ -2887,6 +2901,116 @@ name|termsFilter
 operator|.
 name|toString
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testRamBytesUsed
+specifier|public
+name|void
+name|testRamBytesUsed
+parameter_list|()
+block|{
+name|List
+argument_list|<
+name|Term
+argument_list|>
+name|terms
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+specifier|final
+name|int
+name|numTerms
+init|=
+literal|1000
+operator|+
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+literal|1000
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|numTerms
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|terms
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"f"
+argument_list|,
+name|RandomStrings
+operator|.
+name|randomUnicodeOfLength
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+literal|10
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|TermsFilter
+name|filter
+init|=
+operator|new
+name|TermsFilter
+argument_list|(
+name|terms
+argument_list|)
+decl_stmt|;
+specifier|final
+name|long
+name|actualRamBytesUsed
+init|=
+name|RamUsageTester
+operator|.
+name|sizeOf
+argument_list|(
+name|filter
+argument_list|)
+decl_stmt|;
+specifier|final
+name|long
+name|expectedRamBytesUsed
+init|=
+name|filter
+operator|.
+name|ramBytesUsed
+argument_list|()
+decl_stmt|;
+comment|// error margin within 1%
+name|assertEquals
+argument_list|(
+name|actualRamBytesUsed
+argument_list|,
+name|expectedRamBytesUsed
+argument_list|,
+name|actualRamBytesUsed
+operator|/
+literal|100
 argument_list|)
 expr_stmt|;
 block|}
